--- a/src/main/res/layout/chrono.xml
+++ b/src/main/res/layout/chrono.xml
@@ -21,13 +21,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/imageButton"
         android:src="@drawable/playbutton"
-        android:layout_below="@+id/textView"
-        android:layout_toStartOf="@+id/textView"
-        android:layout_marginEnd="39dp"
         android:visibility="visible"
-        android:layout_alignParentEnd="false"
-        android:layout_alignParentStart="false"
         android:adjustViewBounds="true"
-        android:background="@android:color/transparent" />
+        android:background="@android:color/transparent"
+        android:layout_marginStart="54dp"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
