--- a/src/main/res/layout/chrono.xml
+++ b/src/main/res/layout/chrono.xml
@@ -8,13 +8,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text=""
+        android:text="0:00:00"
         android:id="@+id/textView"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
         android:textColor="#ffffff"
         android:textStyle="bold"
-        android:textSize="80dp" />
+        android:textSize="80dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -24,8 +24,17 @@
         android:visibility="visible"
         android:adjustViewBounds="true"
         android:background="@android:color/transparent"
-        android:layout_marginStart="54dp"
         android:layout_below="@+id/textView"
-        android:layout_alignParentStart="true" />
+        android:layout_toStartOf="@+id/textView"
+        android:layout_marginTop="67dp" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton2"
+        android:src="@drawable/stopbutton"
+        android:background="@android:color/transparent"
+        android:layout_alignTop="@+id/imageButton"
+        android:layout_toEndOf="@+id/textView" />
 
 </RelativeLayout>
