--- a/src/main/res/layout/chrono.xml
+++ b/src/main/res/layout/chrono.xml
@@ -13,8 +13,9 @@
         android:textColor="#ffffff"
         android:textStyle="bold"
         android:textSize="80dp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="142dp" />
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -24,9 +25,9 @@
         android:visibility="visible"
         android:adjustViewBounds="true"
         android:background="@android:color/transparent"
-        android:layout_below="@+id/textView"
-        android:layout_toStartOf="@+id/textView"
-        android:layout_marginTop="67dp" />
+        android:layout_marginBottom="61dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/textView" />
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -35,6 +36,6 @@
         android:src="@drawable/stopbutton"
         android:background="@android:color/transparent"
         android:layout_alignTop="@+id/imageButton"
-        android:layout_toEndOf="@+id/textView" />
+        android:layout_alignEnd="@+id/textView" />
 
 </RelativeLayout>
